// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Container) OasisTrade should render 1`] = `
<FlexBox
  alignContent="stretch"
  alignItems="stretch"
  className=""
  justifyContent="normal"
  vertical={false}
  wrap={true}
>
  <OasisMarketWidget
    activeTradingPair={
      Object {
        "baseToken": "MKR",
        "quoteToken": "DAI",
      }
    }
    defaultPeriod="TIME_SPAN/WEEK"
    initialMarketHistoryLoaded={true}
    isMarketInitialized={true}
    marketData={
      Immutable.List [
      ]
    }
    setActiveTradingPair={[Function]}
    tradedTokens={
      Immutable.List [
        Immutable.Map {
          base: "MKR",
          quote: "W-ETH",
          priority: 10,
          isDefault: true,
        },
        Immutable.Map {
          base: "W-ETH",
          quote: "DAI",
          priority: 9,
          isDefault: true,
        },
        Immutable.Map {
          base: "MKR",
          quote: "DAI",
          priority: 8,
          isDefault: true,
        },
        Immutable.Map {
          base: "SAI",
          quote: "DAI",
          priority: 6,
          isDefault: true,
        },
        Immutable.Map {
          base: "W-GNT",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "DGD",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "REP",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "ICN",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "1ST",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "SNGLS",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "VSL",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "PLU",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "MLN",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "RHOC",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "TIME",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "GUP",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "BAT",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
        Immutable.Map {
          base: "NMR",
          quote: "W-ETH",
          priority: 0,
          isDefault: false,
        },
      ]
    }
  />
  <Connect(OasisChart)
    initialMarketHistoryLoaded={true}
  />
  <Connect(OasisTradeOrders) />
</FlexBox>
`;

exports[`(Container) OasisTrade will receive right actions 1`] = `
Object {
  "actions": Object {
    "changeRouteEpic": [Function],
    "denotePrecision": [Function],
    "setActiveTradingPairEpic": [Function],
    "updateTradingPairOfferCount": [Function],
  },
}
`;

exports[`(Container) OasisTrade will receive right props 1`] = `
Object {
  "activeTradingPair": Object {
    "baseToken": "MKR",
    "quoteToken": "DAI",
  },
  "defaultPeriod": "TIME_SPAN/WEEK",
  "initialMarketHistoryLoaded": true,
  "isMarketInitialized": true,
  "marketsData": Immutable.List [
],
  "offersInitialized": undefined,
  "tradedTokens": Immutable.List [
    Immutable.Map {
        base: "MKR",
        quote: "W-ETH",
        priority: 10,
        isDefault: true,
    },
    Immutable.Map {
        base: "W-ETH",
        quote: "DAI",
        priority: 9,
        isDefault: true,
    },
    Immutable.Map {
        base: "MKR",
        quote: "DAI",
        priority: 8,
        isDefault: true,
    },
    Immutable.Map {
        base: "SAI",
        quote: "DAI",
        priority: 6,
        isDefault: true,
    },
    Immutable.Map {
        base: "W-GNT",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "DGD",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "REP",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "ICN",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "1ST",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "SNGLS",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "VSL",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "PLU",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "MLN",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "RHOC",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "TIME",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "GUP",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "BAT",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
    Immutable.Map {
        base: "NMR",
        quote: "W-ETH",
        priority: 0,
        isDefault: false,
    },
],
  "validBaseTokensList": Immutable.List [
    "W-GNT",
    "DAI",
    "DGD",
    "REP",
    "ICN",
    "1ST",
    "SNGLS",
    "VSL",
    "PLU",
    "MLN",
    "RHOC",
    "TIME",
    "GUP",
    "BAT",
    "NMR",
],
  "validQuoteTokensList": Immutable.List [
    "W-ETH",
],
}
`;
